# nebius-hackathon

./: .gitignore  CLAUDE.md  README.md
docs/: PERCEPTION.md  PHYSICAL_COMPONENT.md  PRD.md
frontend/: .env.example  .gitignore  AGENTS.md  middleware.ts  next.config.ts  package-lock.json  package.json  proxy.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/(auth)/: layout.tsx
frontend/app/(auth)/login/: page.tsx
frontend/app/(auth)/signup/: page.tsx
frontend/app/(dashboard)/: layout.tsx
frontend/app/(dashboard)/dashboard/: page.tsx
frontend/app/(dashboard)/discover/: page.tsx
frontend/app/(dashboard)/embeddings/: page.tsx
frontend/app/(dashboard)/guide/: page.tsx
frontend/app/(dashboard)/routes/: page.tsx
frontend/app/api/llm/suggest-queries/: route.ts
frontend/app/api/session/: route.ts
frontend/components/auth/: AuthGuard.tsx  AuthProvider.tsx
frontend/components/dashboard/: CreateRouteDialog.tsx  EmbeddingsGrid.tsx  IngestSourceDialog.tsx  RoutesTable.tsx  Sidebar.tsx  StatCard.tsx  TopNav.tsx
frontend/components/discover/: PlaceCard.tsx  SearchBar.tsx  TripPlanModal.tsx
frontend/components/guide/: AudioButton.tsx  ChatInput.tsx  ChatMessages.tsx  PlaceSelector.tsx
frontend/components/map/: MapInner.tsx  MapView.tsx
frontend/hooks/: useGuideSocket.ts
robot/: .env.example  config.py  main.py  pyproject.toml  server_client.py
robot/agent/: agent.py  proactive.py  state.py
robot/audio/: listener.py  transcriber.py  tts.py
robot/tools/: __init__.py  capture_frame.py  move.py  next_stop.py  point.py  read_qr.py  retrieve_rag.py  search_web.py  speak.py
robot/ui/: app.py
robot/vision/: camera.py  qr_scanner.py
server/: .env.example  AGENTS.md  Dockerfile  docker-compose.yml  pyproject.toml
server/app/: dependencies.py  main.py
server/app/core/: config.py  logging.py  security.py
server/app/databases/: mongodb.py  redis.py
server/app/models/: place.py  research.py  route.py  user.py
server/app/routers/: auth.py  embeddings.py  guide.py  places.py  research.py  robot.py  routes.py
server/app/services/: auth_service.py  image_service.py  place_service.py  route_service.py
server/app/services/embeddings/: __init__.py  embedding_service.py
server/app/services/embeddings/utils/: __init__.py  embedding_utils.py  retrieval_utils.py
server/app/services/guide/: agent.py  state.py  tools.py
server/app/services/research/: __init__.py  agent.py  nodes.py  state.py
server/app/services/search/: __init__.py  tavily_service.py
