[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "email-validator>=2.3.0",
    "fastapi[standard]>=0.135.1",
    "httpx>=0.28.1",
    "motor>=3.7.1",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.22",
    "redis[asyncio]>=7.3.0",
    "uvicorn>=0.41.0",
]

[tool.uv]
dev-dependencies = []
