[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "bcrypt>=5.0.0",
    "email-validator>=2.3.0",
    "fastapi[standard]>=0.135.1",
    "httpx>=0.28.1",
    "langchain>=1.2.12",
    "langchain-community>=0.4.1",
    "langchain-nebius>=0.1.3",
    "langgraph>=0.4.0",
    "tavily-python>=0.5.0",
    "langgraph>=0.4.0",
    "motor>=3.7.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.22",
    "redis[asyncio]>=7.3.0",
    "tavily-python>=0.5.0",
    "elevenlabs>=1.0.0",
    "langchain-openai>=0.3.0",
    "uvicorn>=0.41.0",
    "loguru>=0.7.0",
    "qrcode[pil]>=8.2",
]

[tool.uv]
dev-dependencies = []
